Generating Random Number

--- a/numero-secreto/index.html
+++ b/numero-secreto/index.html
@@ -26,5 +26,6 @@
             <div>O número secreto é maior <i class="fa-sharp fa-solid fa-arrow-up"></i></div>
         </div>
     </section>
+    <script src="./app/sortearNumero.js"></script>
 </body>
 </html>
