--- a/numero-secreto/index.html
+++ b/numero-secreto/index.html
@@ -21,11 +21,12 @@
         </h3>
     
         <div id="chute" class="mensagem">
-            <div>Você disse: </div>
-            <span class="box">20</span>
+            <!-- <div>Você disse: </div>
+            <span class="box">20</span> -->
             <div>O número secreto é maior <i class="fa-sharp fa-solid fa-arrow-up"></i></div>
         </div>
     </section>
     <script src="./app/sortearNumero.js"></script>
+    <script src="./app/reconhecimentoVoz.js"></script>
 </body>
 </html>
