--- a/numero-secreto/index.html
+++ b/numero-secreto/index.html
@@ -14,7 +14,7 @@
         <a href="" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a>
         <a href="" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
-    <section>
+    <section id="page-content">
         <h1>Acerte o número secreto</h1>
         <h3>
             O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span>
@@ -28,5 +28,6 @@
     </section>
     <script src="./app/sortearNumero.js"></script>
     <script src="./app/reconhecimentoVoz.js"></script>
+    <script src="./app/validacao.js"></script>
 </body>
 </html>
